Notification on new posts on mobile. Fixes #29

--- a/public/themes/b3s/mobile.css
+++ b/public/themes/b3s/mobile.css
@@ -54,11 +54,16 @@ body[orient="landscape"] {
   top: 1px;
   right: 0;
 }
-#header #navigationToggle a, #header #navigationToggle a a:visited {
+#header #navigationToggle a {
   display: block;
-  height: 44px;
   width: 67px;
-  background: transparent url(images/mobile/header_navigation.png);
+  height: 44px;
+  background-size: 134px 44px;
+  background-image: url(images/mobile/header_menu.png);
+  background-position: 0px 0px;
+}
+#header #navigationToggle a.new {
+  background-position: -67px 0px;
 }
 
 #header h1.logo {
@@ -499,7 +504,6 @@ blockquote cite {
   color:               #900;
 }
 
-
 /* Retina display overrides */
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
   #header {
@@ -509,10 +513,6 @@ blockquote cite {
   #header h1.page_title .site_name, #header h1.page_title .site_name a, #header h1.page_title .site_name a:visited {
     background: transparent url(images/mobile/b3slogo_x2.png);
     background-size: 49px 45px;
-  }
-  #header #navigationToggle a, #header #navigationToggle a a:visited {
-    background: transparent url(images/mobile/header_navigation_x2.png);
-    background-size: 67px 44px;
   }
   .content {
     background: #fff url(images/mobile/contentbg_x2.png) repeat-x;
